Refactor imports in RealTodoDataSource and TodoController

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@models": ["models/Todo.ts"],
+      "@nxtodo/apiInterface": ["libs/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
