--- a/package.json
+++ b/package.json
@@ -2,19 +2,31 @@
   "name": "@nxtodo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx run-many --target=serve --all",
+    "drizzle:generate": "npx drizzle-kit generate --name create-todos-table",
+    "drizzle:migrate": "npx drizzle-kit migrate",
+    "docker:compose": "docker-compose up"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nx/nest": "^20.0.1",
     "axios": "^1.6.0",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.26.2",
+    "drizzle-orm": "^0.35.2",
+    "joi": "^17.13.3",
     "lucide-react": "^0.453.0",
+    "pg": "^8.13.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
@@ -42,6 +54,7 @@
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
+    "@types/pg": "^8.11.10",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "^4.2.0",
