--- a/apps/todo-nest-app/tsconfig.app.json
+++ b/apps/todo-nest-app/tsconfig.app.json
@@ -7,6 +7,6 @@
     "emitDecoratorMetadata": true,
     "target": "es2021"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../../drizzle.config.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
